ammend input font-size in attempt to stop zooming on mobile

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -198,6 +198,10 @@ input {
 	padding: 5px 2px 5px 7px;
 }
 
+input[type="text"] {
+	font-size: 16px;
+}
+
 .submitButton {
 	border: none;
 	width: 25px;
